[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vnx-orchestration"
version = "1.0.0-rc3"
description = "Governance-first runtime for AI agents (NDJSON receipts, SPC-grade quality gates)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "Vincent van Deth", email = "advies@vincentvandeth.nl"}]
dependencies = [
    "watchdog>=4.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
]

[project.scripts]
vnx = "vnx_cli.main:main"

[project.urls]
Homepage = "https://github.com/Vinix24/vnx-orchestration"
Repository = "https://github.com/Vinix24/vnx-orchestration"

[tool.setuptools]
packages = ["vnx_cli", "vnx_cli.commands"]
include-package-data = true

[tool.setuptools.package-data]
"vnx_cli" = ["templates/**/*", "schemas/**/*"]
